[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/ui/verb_display/VerbDisplay.gd" type="Script" id=1]
[ext_resource path="res://game_assets/gui/window_border.png" type="Texture" id=2]
[ext_resource path="res://game/ui/verb_display/Verb.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 140, 126 )
margin_left = 7.80353
margin_right = 6.67147
margin_top = 6.42319
margin_bottom = 6.03766

[node name="VerbDisplay" type="Node2D"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 14.114
margin_top = -154.335
margin_right = 354.114
margin_bottom = -15.3349
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlNode" type="Node2D" parent="PanelContainer"]

[node name="BgColor" type="Panel" parent="PanelContainer/ControlNode"]
modulate = Color( 0.498039, 0.207843, 0, 0.835294 )
margin_left = -78.0
margin_top = -512.0
margin_right = 434.0
margin_bottom = 772.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ControlNode"]
margin_left = 3.0
margin_right = 503.0
margin_bottom = 168.0
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerbContainer" type="VBoxContainer" parent="PanelContainer/ControlNode/MarginContainer"]
margin_right = 500.0
margin_bottom = 56.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Verb" parent="PanelContainer/ControlNode/MarginContainer/VerbContainer" instance=ExtResource( 3 )]

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 333.0
margin_bottom = 132.0
mouse_filter = 2
custom_constants/margin_right = -7
custom_constants/margin_top = -7
custom_constants/margin_left = -7
custom_constants/margin_bottom = -8

[node name="Background" type="Panel" parent="PanelContainer/MarginContainer"]
margin_left = -7.0
margin_top = -7.0
margin_right = 333.0
margin_bottom = 133.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MotionTween" type="Tween" parent="."]
[connection signal="gui_input" from="PanelContainer" to="." method="_on_PanelContainer_gui_input"]
